[package]
name = "rag"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
fst = { version = "0.4.7" }
instant-distance = { version = "0.6.1", features = ["with-serde"] }
lopdf = "0.32.0"
rust-bert = { version = "0.22.0", features = ["download-libtorch"] }
slab = { version = "0.4.9", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
sha256 = "1.5.0"
shared = { path = "../shared" }
tch = { version = "0.14.0", features = ["download-libtorch"] }
