[package]
name = "rag"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
ego-tree = "0.6.2"
fst = { version = "0.4.7" }
html5ever = "0.26.0"
indicatif = { workspace = true }
instant-distance = { version = "0.6.1", features = ["with-serde"] }
lopdf = "0.32.0"
mdka = "1.2.1"
rust-bert = { version = "0.22.0", features = ["download-libtorch"] }
slab = { version = "0.4.9", features = ["serde"] }
scraper = "0.18.1"
serde = { version = "1.0.196", features = ["derive"] }
sha256 = "1.5.0"
shared = { path = "../shared" }
tch = { version = "0.14.0", features = ["download-libtorch"] }
ureq = "2.9.6"
